--- a/src/app/features/cart/pages/checkout-page/checkout-page.component.css
+++ b/src/app/features/cart/pages/checkout-page/checkout-page.component.css
@@ -26,14 +26,6 @@
   position: relative;
 }
 
-.invalid-feedback {
-  display: block;
-  color: #dc3545;
-  font-size: 12px;
-  margin-top: 8px;
-  font-weight: 400;
-}
-
 .checkout-form .sm-input{
   width: 277px;
 }
@@ -66,6 +58,7 @@
 
 .cart-content {
   padding-top: 0;
+  height: 304px;
 }
 
 .cart-items {
@@ -81,6 +74,5 @@
 }
 
 .cart-price-summary {
-  margin-top: 0;
-  margin-bottom: 5rem;
+  margin: 5.4rem 0;
 }
