--- a/src/styles.css
+++ b/src/styles.css
@@ -260,6 +260,7 @@ html, body {
   flex-direction: column;
   gap: 16px;
   margin-bottom: 6rem;
+  margin: 2rem 0 6rem;
 }
 
 .cart-price-summary span {
@@ -311,4 +312,27 @@ html, body {
   padding: 5px;
   transition: color 0.3s ease;
   color: #10151F;
+}
+
+.invalid-feedback {
+  display: block;
+  color: #FF4000;
+  font-size: 10px;
+  font-weight: 300;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  align-items: stretch;
+}
+
+.input-container .form-control {
+  width: 100%;
+}
+
+.input-container .invalid-feedback {
+  align-self: flex-start;
+  margin-top: 4px;
 }
