--- a/src/app/features/products/pages/products-list-page/products-list-page.component.html
+++ b/src/app/features/products/pages/products-list-page/products-list-page.component.html
@@ -6,8 +6,8 @@
     </div>
 
     <div *ngIf="!loading" class="filters-container row">
-        <div class="col-3 prodact-pg-title fw-semibold">Products</div>
-        <div class="col-9 d-flex justify-content-end align-items-center filters-sortby-container">
+        <div class="col-md-3 col-12 prodact-pg-title fw-semibold">Products</div>
+        <div class="col-md-9 d-flex col-12 justify-content-end align-items-center filters-sortby-container">
 
             <div class="page-info">
                 <span>Showing {{ currentPage }} - {{ lastPage }} of {{ total }} results</span>
