--- a/src/app/features/auth/pages/login-page/login-page.component.html
+++ b/src/app/features/auth/pages/login-page/login-page.component.html
@@ -3,7 +3,7 @@
   <div class="col-md-6 d-none d-md-block p-0 auth-page-img">
   </div>
 
-  <div class="col-md-6 d-flex align-items-center justify-content-center">
+  <div class="col-md-6 d-flex col-12 align-items-center justify-content-center">
     <div class="login-container">
       <h3 class="mb-5 fw-semibold">Log in</h3>
 
