--- a/src/app/features/auth/pages/register-page/register-page.component.html
+++ b/src/app/features/auth/pages/register-page/register-page.component.html
@@ -3,7 +3,7 @@
   <div class="col-md-6 d-none d-md-block p-0 auth-page-img">
   </div>
 
-  <div class="col-md-6 d-flex align-items-center justify-content-center">
+  <div class="col-md-6 col-12 d-flex align-items-center justify-content-center">
     <div class="register-container">
       <h3 class="mb-5 fw-semibold">Registration</h3>
 
